Various fixes to snakemake code

--- a/workflow/envs/env.yaml
+++ b/workflow/envs/env.yaml
@@ -14,3 +14,6 @@ dependencies:
     - r-data.table == 1.12.2
     - r-sn == 1.6_1
     - r-ggplot2 == 3.3.0
+    - r-future == 1.16.0
+    - r-purrr == 0.3.3
+    - r-furrr == 0.1.0
