--- a/config.yaml
+++ b/config.yaml
@@ -6,9 +6,10 @@
 
 simulation_name: "test"
 
-n_threads: 4 # (Maximum) number of threads for simulation
+n_threads_max: 1000 # Max no. of cores to use for simulation
 n_iterations: 10 # Number of runs per scenario
-parallel: True # Whether to use parallel mapping to speed up simulation
+print_reports: False # Print per-scenario time reports during simulation
+show_progress: False # Use mapping function's show_progress option
 
 env_path: "workflow/envs/env.yaml"
 
@@ -34,15 +35,15 @@ output_parameters: # Write options (NB: overall scenario summaries always writte
 scenario_parameters:
 
     # Probabilities (0 to 1)
-    p_asymptomatic: 0.3 # Proportion of cases that are fully asymptomatic carriers
-    p_ident_sym: 0.9 # Proportion of symptomatic cases that are identified (without tracing)
-    p_smartphone_overall: 0.8 # Proportion of cases with trace-enabled smartphones
-    p_smartphone_link: 0.9 # Proportion of contacts of cases with smartphones who have smartphones
-    p_traced_auto: 0.9 # Success rate of automated contact tracing (out of possible traces)
-    p_traced_manual: 0.6 # Success rate of manual contact tracing (out of possible traces that can't be traced automatically)
+    p_asymptomatic: [0.25,0.5] # Proportion of cases that are fully asymptomatic carriers
+    p_ident_sym: 1 # Proportion of symptomatic cases that are identified (without tracing)
+    p_smartphone_overall: 1 # Proportion of cases with trace-enabled smartphones
+    p_smartphone_link: 1 # Proportion of contacts of cases with smartphones who have smartphones
+    p_traced_auto: [0.4,0.6,0.8,1.0] # Success rate of automated contact tracing (out of possible traces)
+    p_traced_manual: 1 # Success rate of manual contact tracing (out of possible traces that can't be traced automatically)
     p_environmental: 0 # Proportion of contacts that are environmental (here = untraceable)
-    p_blocked_isolation: 0.9 # Proportion of transmissions blocked by isolation of parent case
-    p_blocked_quarantine: 0.7 # Proportion of transmissions blocked by quarantine of parent case
+    p_blocked_isolation: 1 # Proportion of transmissions blocked by isolation of parent case
+    p_blocked_quarantine: 1 # Proportion of transmissions blocked by quarantine of parent case
 
     # Numeric values (for infinities, write "Inf")
     r0_base: 2.5 # Overall R0 in the absence of interventions
@@ -52,19 +53,19 @@ scenario_parameters:
     generation_alpha: 0.7 # Skew parameter of GT distr. (smaller = more pre-symptomatic transmission)
     recovery_quantile: 0.999 # Quantile of GT distr. to use as recovery time (larger = later recov.)
     n_initial_cases: 20 # Number of independent index cases
-    test_sensitivity: 0.9 # P(positive test|true case)
-    data_limit_auto: 30 # Number of days contact data for automated tracing is retained
+    test_sensitivity: 1 # P(positive test|true case)
+    data_limit_auto: Inf # Number of days contact data for automated tracing is retained
     data_limit_manual: Inf # Number of days contact data for manual tracing is retained
-    contact_limit_auto_asym: 30 # Number of days prior to *trace initiation* scanned for contacts for an asymptomatic case under automated tracing
-    contact_limit_auto_sym: 30 # Number of days prior to *symptom onset* scanned for contacts for a symptomatic case under automated tracing
-    contact_limit_manual_asym: 2 # Number of days prior to *trace initiation* scanned for contacts for an asymptomatic case under manual tracing
-    contact_limit_manual_sym: 2 # Number of days prior to *symptom onset* scanned for contacts for a symptomatic case under manual tracing
-    rollout_delay_gen: 0 # Delay in generations between simulation start and initiation of response
+    contact_limit_auto_asym: Inf # Number of days prior to *trace initiation* scanned for contacts for an asymptomatic case under automated tracing
+    contact_limit_auto_sym: Inf # Number of days prior to *symptom onset* scanned for contacts for a symptomatic case under automated tracing
+    contact_limit_manual_asym: Inf # Number of days prior to *trace initiation* scanned for contacts for an asymptomatic case under manual tracing
+    contact_limit_manual_sym: Inf # Number of days prior to *symptom onset* scanned for contacts for a symptomatic case under manual tracing
+    rollout_delay_gen: [0,1,2,3,4] # Delay in generations between simulation start and initiation of response
     rollout_delay_days: 0 # Delay in days between simulation start and initiation of response
     cap_max_generations: 200 # Maximum number of simulation generations before control fails
     cap_max_weeks: 52 # Maximum number of simulation days before control fails
     cap_cases: 5000 # Maximum number of cumulative cases before control fails
-    backtrace_distance: [0,"Inf"] # Maximum number of generations of reverse contact tracing
+    backtrace_distance: [0,1,"Inf"] # Maximum number of generations of reverse contact tracing
 
     # Boolean switches
     test_serological: True # Whether testing can detect recovered individuals
@@ -72,7 +73,7 @@ scenario_parameters:
 
     # Distributions (specified as R-function strings)
     incubation_time: "function(n) rweibull(n=n, scale=6.492272, shape=2.322737)" # Time between exposure and symptom onset
-    test_time: "function(n) rep(0.5, n)" # Time between identification and test results
+    test_time: "function(n) rep(0, n)" # Time between identification and test results
     trace_time_auto: "function(n) rep(0, n)" # Time taken to trace contacts using automated tracing
-    trace_time_manual: "function(n) rep(2, n)" # Time taken to trace contacts using manual tracing
+    trace_time_manual: "function(n) rep(0, n)" # Time taken to trace contacts using manual tracing
     delay_time: "function(n) rweibull(n=n, scale = 4.287786, shape = 1.651524)" # Time between symptom onset and case identification
