--- a/config.yaml
+++ b/config.yaml
@@ -35,19 +35,21 @@ output_parameters: # Write options (NB: overall scenario summaries always writte
 scenario_parameters:
 
     # Probabilities (0 to 1)
-    p_asymptomatic: [0.25,0.5] # Proportion of cases that are fully asymptomatic carriers
+    p_asymptomatic: 0.3 # Proportion of cases that are fully asymptomatic carriers
     p_ident_sym: 1 # Proportion of symptomatic cases that are identified (without tracing)
     p_smartphone_overall: 1 # Proportion of cases with trace-enabled smartphones
-    p_smartphone_link: 1 # Proportion of contacts of cases with smartphones who have smartphones
-    p_traced_auto: [0.4,0.6,0.8,1.0] # Success rate of automated contact tracing (out of possible traces)
+    p_smartphone_link: -1 # Proportion of contacts of cases with smartphones who have smartphones (-1 to disable and just use p_smartphone_overall)
+    p_traced_auto: 1 # Success rate of automated contact tracing (out of possible traces)
     p_traced_manual: 1 # Success rate of manual contact tracing (out of possible traces that can't be traced automatically)
     p_environmental: 0 # Proportion of contacts that are environmental (here = untraceable)
     p_blocked_isolation: 1 # Proportion of transmissions blocked by isolation of parent case
-    p_blocked_quarantine: 1 # Proportion of transmissions blocked by quarantine of parent case
+    p_blocked_quarantine: -1 # Proportion of transmissions blocked by quarantine of parent case (-1 to disable and just use p_blocked_isolation)
+    p_data_sharing_auto: 1 # Proportion of individuals who share/upload contact data for onward automated tracing
+    p_data_sharing_manual: 1 # Proportion of individuals who share/upload contact data for onward manual tracing
 
     # Numeric values (for infinities, write "Inf")
     r0_base: 2.5 # Overall R0 in the absence of interventions
-    r0_asymptomatic: 2.5 # R0 of asymptomatic carriers in the absence of interventions
+    rel_r0_asymptomatic: 1 # R0 of asymptomatic carriers in the absence of interventions, as a fraction of r0_base
     dispersion: 0.16 # Superspreading parameter (smaller = more variance in #offspring)
     generation_omega: 2 # Scale parameter of generation-time distribution
     generation_alpha: 0.7 # Skew parameter of GT distr. (smaller = more pre-symptomatic transmission)
@@ -58,12 +60,12 @@ scenario_parameters:
     data_limit_manual: Inf # Number of days contact data for manual tracing is retained
     contact_limit_auto: Inf # Number of days prior to min(trace initiation, symptom onset) scanned for contacts under automated tracing
     contact_limit_manual: Inf # Number of days prior to min(trace initiation, symptom onset) scanned for contacts under manual tracing
-    rollout_delay_gen: [0,1,2,3,4] # Delay in generations between simulation start and initiation of response
+    rollout_delay_gen: 0 # Delay in generations between simulation start and initiation of response
     rollout_delay_days: 0 # Delay in days between simulation start and initiation of response
     cap_max_generations: 200 # Maximum number of simulation generations before control fails
     cap_max_weeks: 52 # Maximum number of simulation days before control fails
-    cap_cases: 5000 # Maximum number of cumulative cases before control fails
-    backtrace_distance: [0,1,"Inf"] # Maximum number of generations of reverse contact tracing
+    cap_cases: 10000 # Maximum number of cumulative cases before control fails
+    backtrace_distance: Inf # Maximum number of generations of reverse contact tracing
 
     # Boolean switches
     test_serological: True # Whether testing can detect recovered individuals
