--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@
 # High-level simulation parameters
 #=============================================================================
 
-simulation_name: "test"
+simulation_name: "default"
 
 n_threads_max: 1000 # Max no. of cores to use for simulation
 n_iterations: 100 # Number of runs per scenario
@@ -35,33 +35,33 @@ output_parameters: # Write options (NB: overall scenario summaries always writte
 scenario_parameters:
 
     # Probabilities (0 to 1)
-    p_asymptomatic: 0.3 # Proportion of cases that are fully asymptomatic carriers
-    p_ident_sym: 1 # Proportion of symptomatic cases that are identified (without tracing)
+    p_asymptomatic: 0.4 # Proportion of cases that are fully asymptomatic carriers
+    p_ident_sym: 0.9 # Proportion of symptomatic cases that are identified (without tracing)
     p_smartphone_overall: 1 # Proportion of cases with trace-enabled smartphones
     p_smartphone_link: -1 # Proportion of contacts of cases with smartphones who have smartphones (-1 to disable and just use p_smartphone_overall)
     p_traced_auto: 1 # Success rate of automated contact tracing (out of possible traces)
     p_traced_manual: 1 # Success rate of manual contact tracing (out of possible traces that can't be traced automatically)
-    p_environmental: 0 # Proportion of contacts that are environmental (here = untraceable)
-    p_compliance_isolation: 1 # Proportion of cases who comply with isolation/quarantine
+    p_environmental: 0.1 # Proportion of contacts that are environmental (here = untraceable)
+    p_compliance_isolation: 0.9 # Proportion of cases who comply with isolation/quarantine
     p_data_sharing_auto: 1 # Proportion of individuals who share/upload contact data for onward automated tracing
     p_data_sharing_manual: 1 # Proportion of individuals who share/upload contact data for onward manual tracing
+    test_sensitivity: [0.8,0.9] # P(positive test|true case)
 
     # Numeric values (for infinities, write "Inf")
     r0_base: 2.5 # Overall R0 in the absence of interventions
-    rel_r0_asymptomatic: 1 # R0 of asymptomatic carriers in the absence of interventions, as a fraction of r0_base
-    dispersion: 0.16 # Superspreading parameter (smaller = more variance in #offspring)
+    rel_r0_asymptomatic: [0.5, 0.75] # R0 of asymptomatic carriers in the absence of interventions, as a fraction of r0_base
+    dispersion: 0.11 # Superspreading parameter (smaller = more variance in #offspring)
     generation_omega: 2 # Scale parameter of generation-time distribution
-    generation_alpha: 0.7 # Skew parameter of GT distr. (smaller = more pre-symptomatic transmission)
+    generation_alpha: -0.3 # Skew parameter of GT distr. (smaller = more pre-symptomatic transmission)
     recovery_quantile: 0.999 # Quantile of GT distr. to use as recovery time (larger = later recov.)
     n_initial_cases: 20 # Number of independent index cases
-    test_sensitivity: 1 # P(positive test|true case)
     data_limit_auto: Inf # Number of days contact data for automated tracing is retained
     data_limit_manual: Inf # Number of days contact data for manual tracing is retained
     contact_limit_auto: Inf # Number of days prior to min(trace initiation, symptom onset) scanned for contacts under automated tracing
     contact_limit_manual: Inf # Number of days prior to min(trace initiation, symptom onset) scanned for contacts under manual tracing
     rollout_delay_gen: 0 # Delay in generations between simulation start and initiation of response
     rollout_delay_days: 0 # Delay in days between simulation start and initiation of response
-    cap_max_generations: 200 # Maximum number of simulation generations before control fails
+    cap_max_generations: Inf # Maximum number of simulation generations before control fails
     cap_max_weeks: 52 # Maximum number of simulation days before control fails
     cap_cases: 10000 # Maximum number of cumulative cases before control fails
     backtrace_distance: Inf # Maximum number of generations of reverse contact tracing
@@ -71,8 +71,8 @@ scenario_parameters:
     trace_neg_symptomatic: True # Whether symptomatic cases who test negative are traced
 
     # Distributions (specified as R-function strings)
-    incubation_time: "function(n) rweibull(n=n, scale=6.492272, shape=2.322737)" # Time between exposure and symptom onset
-    test_time: "function(n) rep(0, n)" # Time between identification and test results
+    incubation_time: "function(n) rlnorm(n=n, meanlog = 1.644, sdlog = 0.363)" # Time between exposure and symptom onset
+    test_time: "function(n) rgamma(n=1e5, shape=1, rate=2) + 1" # Time between identification and test results
     trace_time_auto: "function(n) rep(0, n)" # Time taken to trace contacts using automated tracing
-    trace_time_manual: "function(n) rep(0, n)" # Time taken to trace contacts using manual tracing
+    trace_time_manual: "function(n) rlnorm(n=n, meanlog=log(0.5), sdlog=1.5)" # Time taken to trace contacts using manual tracing
     delay_time: "function(n) rweibull(n=n, scale = 4.287786, shape = 1.651524)" # Time between symptom onset and case identification
