--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,12 @@
 results/*
 *.swp
 .snakemake/*
-*log_files/*
-*output_files/*
+log_files/*
+output_files/*
 figures_local/*
 *.Rproj
 *Rplots.pdf
+*.swo
+*/log_files/*
+*/output_files/*
+*/.snakemake/*
