--- a/figures_workflow/Snakefile
+++ b/figures_workflow/Snakefile
@@ -25,41 +25,41 @@ env_main = os.path.join(env_dir, "env.yaml")
 rule all:
     """Generate figure images for manuscript."""
     input:
+        # Main-text strategy figure (+ associated SI)
         os.path.join(out_dir, "main_strategies.png"),
-        os.path.join(out_dir, "si_strategies-ptrace-lowuptake.png"),
-        os.path.join(out_dir, "si_strategies-ptrace-ctrl.png"),
-        os.path.join(out_dir, "si_strategies-uptake-ctrl.png"),
-        os.path.join(out_dir, "si_strategies-uptake-comp.png"),
+        os.path.join(out_dir, "si_strategies-uptake-reff.png"),
         os.path.join(out_dir, "si_strategies-window-manual.png"),
-        os.path.join(out_dir, "si_strategies-window-hybrid-reff.png"),
-        os.path.join(out_dir, "si_strategies-window-hybrid-ctrl.png"),
-        os.path.join(out_dir, "main_ascertainment.png"),
+        os.path.join(out_dir, "si_strategies-window-hybrid.png"),
+        # Main-text ascertainment/sensitivity figure (+ associated SI)
+        os.path.join(out_dir, "main_ascsens.png"),
+        # TODO: Add ascertainment/sensitivity contour plot
+        # Main-text R0 figure (+ associated SI)
         os.path.join(out_dir, "main_r0.png"),
-        os.path.join(out_dir, "si_r0_highasc.png"),
-        os.path.join(out_dir, "si_r0_lowuptake.png"),
-        os.path.join(out_dir, "si_r0_2day.png"),
-        os.path.join(out_dir, "si_r0_notest.png"),
-        os.path.join(out_dir, "si_r0-contour-reff.png"),
-        os.path.join(out_dir, "si_r0-contour-ctrl.png"),
-        os.path.join(out_dir, "si_r0-contour-bidir-rel.png"),
-        os.path.join(out_dir, "si_r0-contour-hybrid-rel-reff.png"),
-        os.path.join(out_dir, "si_r0-contour-hybrid-rel-ctrl.png"),
+        os.path.join(out_dir, "si_r0_ascertainment.png"),
+        os.path.join(out_dir, "si_r0_uptake.png"),
+        os.path.join(out_dir, "si_r0_window.png"),
+        os.path.join(out_dir, "si_r0_test.png"),
         os.path.join(out_dir, "si_rel-reff.png"),
-        os.path.join(out_dir, "main_summary.png"),
-        os.path.join(out_dir, "si_summary_highasc.png"),
-        os.path.join(out_dir, "si_summary_lowuptake.png"),
-        os.path.join(out_dir, "si_summary_2day.png"),
-        os.path.join(out_dir, "si_summary_notest.png"),
-        os.path.join(out_dir, "si_summary_r0_20.png"),
-        os.path.join(out_dir, "si_summary_r0_30.png"),
-        os.path.join(out_dir, "si_generation.png"),
-        # TODO: Add asymptomatic SI figures
-        os.path.join(out_dir, "si_environmental.png"),
-        os.path.join(out_dir, "si_overdispersion.png"),
-        os.path.join(out_dir, "si_presymptomatic.png"),
-        os.path.join(out_dir, "si_sensitivity.png"),
-        os.path.join(out_dir, "si_ascertainment.png"),
-        os.path.join(out_dir, "si_isolation.png"),
+#        os.path.join(out_dir, "si_r0-contour-reff.png"),
+#        os.path.join(out_dir, "si_r0-contour-ctrl.png"),
+#        os.path.join(out_dir, "si_r0-contour-bidir-rel.png"),
+#        os.path.join(out_dir, "si_r0-contour-hybrid-rel-reff.png"),
+#        os.path.join(out_dir, "si_r0-contour-hybrid-rel-ctrl.png"),
+#        os.path.join(out_dir, "main_summary.png"),
+#        os.path.join(out_dir, "si_summary_highasc.png"),
+#        os.path.join(out_dir, "si_summary_lowuptake.png"),
+#        os.path.join(out_dir, "si_summary_2day.png"),
+#        os.path.join(out_dir, "si_summary_notest.png"),
+#        os.path.join(out_dir, "si_summary_r0_20.png"),
+#        os.path.join(out_dir, "si_summary_r0_30.png"),
+#        os.path.join(out_dir, "si_generation.png"),
+#        # TODO: Add asymptomatic SI figures
+#        os.path.join(out_dir, "si_environmental.png"),
+#        os.path.join(out_dir, "si_overdispersion.png"),
+#        os.path.join(out_dir, "si_presymptomatic.png"),
+#        os.path.join(out_dir, "si_sensitivity.png"),
+#        os.path.join(out_dir, "si_ascertainment.png"),
+#        os.path.join(out_dir, "si_isolation.png"),
 
 #==============================================================================
 # STRATEGIES FIGURE
@@ -79,6 +79,7 @@ rule main_strategies:
     log: os.path.join(log_dir, "main_strategies.log")
     conda: env_main
     params:
+        uptake_main = 0.8,
         panel_scale = 13,
     script: os.path.join(script_dir, "main_strategies.R")
 
@@ -90,8 +91,7 @@ rule si_strategies_window:
         pessimistic = config["data"]["si"]["windows"]["pessimistic"],
     output:
         manual = os.path.join(out_dir, "si_strategies-window-manual.png"),
-        hybrid_reff = os.path.join(out_dir, "si_strategies-window-hybrid-reff.png"),
-        hybrid_ctrl = os.path.join(out_dir, "si_strategies-window-hybrid-ctrl.png"),
+        hybrid = os.path.join(out_dir, "si_strategies-window-hybrid.png"),
     log: os.path.join(log_dir, "si_strategies_window.log")
     conda: env_main
     params:
@@ -112,8 +112,23 @@ rule main_ascsens:
     log: os.path.join(log_dir, "main_ascsens.png")
     conda: env_main
     params:
-        panel_scale = 11,
+        panel_scale = 13,
+        uptake_main = 0.8,
+        window_main = 6,
+        legend_fill = "#F6F6F6",
     script: os.path.join(script_dir, "main_ascsens.R")
+
+#rule main_ascsens_contour:
+#    """Generate ascertainment/sensitivity contour plots."""
+#    input:
+#        ascertainment = config["data"]["main"]["ascsens"]["ascertainment"],
+#        sensitivity = config["data"]["main"]["ascsens"]["sensitivity"],
+#    output: os.path.join(out_dir, "main_ascsens.png")
+#    log: os.path.join(log_dir, "main_ascsens.png")
+#    conda: env_main
+#    params:
+#        panel_scale = 11,
+#    script: os.path.join(script_dir, "main_ascsens.R")
 
 #==============================================================================
 # R0 FIGURE
@@ -168,6 +183,24 @@ rule main_r0:
 #    params:
 #        panel_scale = 11,
 #    script: os.path.join(script_dir, "si_rel-reff.R")
+
+rule si_rel_reff:
+    """Generate relative Reff plots."""
+    input:
+        median = config["data"]["main"]["r0"]["median"],
+        optimistic = config["data"]["main"]["r0"]["optimistic"],
+        pessimistic = config["data"]["main"]["r0"]["pessimistic"],
+    output: os.path.join(out_dir, "si_rel-reff.png")
+    log: os.path.join(log_dir, "si_rel-reff.png")
+    conda: env_main
+    params:
+        panel_scale = 9,
+        uptake_main = 0.8, # TODO: Make these configurable in config file
+        ascertainment_main = 0.5,
+        window_main = 6,
+        trace_neg_main = False,
+        legend_fill = "#F6F6F6",
+    script: os.path.join(script_dir, "si_rel_reff.R")
 
 #==============================================================================
 # SUMMARY FIGURE
