--- a/figures_workflow/config.yaml
+++ b/figures_workflow/config.yaml
@@ -24,8 +24,10 @@ data:
             optimistic: data/si_window_optimistic_1k_scenario.tsv.gz
             pessimistic: data/si_window_pessimistic_1k_scenario.tsv.gz
         ascsens_contour: data/si_ascsens_contour_1k_scenario.tsv.gz
-        r0_contour: 
-        rel_ref: ... # And here
+        r0_contour:
+            median: data/si_r0_contour_median_1k_scenario.tsv.gz
+            optimistic: data/si_r0_contour_optimistic_1k_scenario.tsv.gz
+            pessimistic: data/si_r0_contour_pessimistic_1k_scenario.tsv.gz
         asymptomatic: ...
         univariate:
             environmental: data/si_univariate_environmental_500_scenario.tsv.gz
