--- a/workflow/envs/env.yaml
+++ b/workflow/envs/env.yaml
@@ -7,10 +7,11 @@ channels:
     - r
 dependencies:
     - r-base == 3.6.3
-    - r-tidyverse == 1.3.0
     - r-dplyr == 0.8.3
     - r-tidyr == 1.0.2
     - r-readr == 1.3.1
+    - r-stringr == 1.4.0
+    - r-stringi == 1.4.3
     - r-data.table == 1.12.2
     - r-sn == 1.6_1
     - r-ggplot2 == 3.3.0
