--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,6 @@ simulation_name: "covid_median"
 n_threads_max: 1000 # Max no. of cores to use for simulation
 n_iterations: 10 # Number of runs per scenario
 print_reports: False # Print per-scenario time reports during simulation
-show_progress: False # Use mapping function's show_progress option
 
 env_path: "workflow/envs/env.yaml"
 
@@ -20,10 +19,10 @@ ci_parameters: # Parameters for beta credible interval for control rate
 
 output_parameters: # Write options (NB: overall scenario summaries always written)
     path_prefix: "output_files/data/test"
-    write_raw: True # Write full case reports? (largest)
-    write_weekly: True # Write per-week summaries?
-    write_gen: True # Write per-generation summaries?
-    write_run: True # Write per-run summaries?
+    write_raw: False # Write full case reports? (largest)
+    write_weekly: False # Write per-week summaries?
+    write_gen: False # Write per-generation summaries?
+    write_run: False # Write per-run summaries?
 
 #=============================================================================
 # Scenario parameters
@@ -36,18 +35,18 @@ scenario_parameters:
 
     # Probabilities (0 to 1)
     p_asymptomatic: 0.45 # Proportion of cases that are fully asymptomatic carriers
-    p_ident_sym: 0.9 # Proportion of symptomatic cases that are identified (without tracing)
-    p_smartphone_overall: 0.8 # Proportion of cases with trace-enabled smartphones
+    p_ident_sym: 0.5 # Proportion of symptomatic cases that are identified (without tracing)
+    p_smartphone_overall: 0.85 # Proportion of cases with trace-enabled smartphones
     p_smartphone_link: -1 # Proportion of contacts of cases with smartphones who have smartphones (-1 to disable and just use p_smartphone_overall)
     p_traced_auto: 0.9 # Success rate of automated contact tracing (out of possible traces)
     p_traced_manual: 0.9 # Success rate of manual contact tracing (out of possible traces that can't be traced automatically)
     p_environmental: 0.1 # Proportion of contacts that are environmental (here = untraceable)
     p_compliance_isolation: 0.9 # Proportion of cases who comply with isolation/quarantine
-    p_data_sharing_auto: 1 # Proportion of individuals who share/upload contact data for onward automated tracing
-    p_data_sharing_manual: 0.9 # Proportion of individuals who share/upload contact data for onward manual tracing
-    p_smartphone_listens: 1 # Proportion of smartphones that listen for chirps from others
-    p_smartphone_chirps: 1 # Proportion of smartphones that broadcast chirps
-    test_sensitivity: 0.9 # P(positive test|true case)
+    p_data_sharing_auto: 0.9 # Proportion of individuals who share/upload contact data for onward automated tracing
+    p_data_sharing_manual: 0.98 # Proportion of individuals who share/upload contact data for onward manual tracing
+    p_smartphone_chirps: 1.0 # Proportion of smartphone users who broadcast chirps
+    p_listen_no_chirp: 1.0 # Proportion of smartphone users who listen for chirps without broadcasting
+    test_sensitivity: 0.7 # P(positive test|true case)
 
     # Numeric values (for infinities, write "Inf")
     r0_base: 2.5 # Overall R0 in the absence of interventions
@@ -60,7 +59,7 @@ scenario_parameters:
     data_limit_auto: 14 # Number of days contact data for automated tracing is retained
     data_limit_manual: Inf # Number of days contact data for manual tracing is retained
     contact_limit_auto: Inf # Number of days prior to min(trace initiation, symptom onset) scanned for contacts under automated tracing
-    contact_limit_manual: 7 # Number of days prior to min(trace initiation, symptom onset) scanned for contacts under manual tracing
+    contact_limit_manual: 6 # Number of days prior to min(trace initiation, symptom onset) scanned for contacts under manual tracing
     rollout_delay_gen: 0 # Delay in generations between simulation start and initiation of response
     rollout_delay_days: 0 # Delay in days between simulation start and initiation of response
     cap_max_generations: Inf # Maximum number of simulation generations before control fails
@@ -72,6 +71,7 @@ scenario_parameters:
     test_serological: True # Whether testing can detect recovered individuals
     trace_neg_symptomatic: True # Whether symptomatic cases who test negative are traced
     reciprocal_chirping: False # Whether a contact can be digitally traced using a chirping tracee and a listening trace originator (otherwise has to be the other way round)
+    chirp_index_only: False # Whether chirping is restricted to index cases
 
     # Distributions (specified as R-function strings)
     incubation_time: "function(n) rlnorm(n=n, meanlog = 1.644, sdlog = 0.363)" # Time between exposure and symptom onset
